--- a/docker_env/docker.env
+++ b/docker_env/docker.env
@@ -2,7 +2,7 @@
 MYSQL_ROOT_PASSWORD=root
 MYSQL_ROOT_USER=root
 MYSQL_HOST=database
-MYSQL_DATABASE=mydb
+MYSQL_DATABASE=films
 
 # phpmyadmin
 PMA_HOST=database
